# climaIa

./: .codecov.yml  .coverage  .env  .gitignore  .pre-commit-config.yaml  .python-version  CI_CD_SUMMARY.md  Makefile  PROJECT_SUMMARY.md  README.md  check_python_versions.sh  codigo.ipynb  data_11.csv  env.example  fix_github_actions.sh  install.sh  pyproject.toml  requirements.txt  run_tests.sh  setup.py  start_api.sh
.github/workflows/: tests.yml
CUNDINAMARCA_SUELOS_VF/: CUNDINAMARCA_SUELOS_VF.sbn  CUNDINAMARCA_SUELOS_VF.sbx  CUNDINAMARCA_SUELOS_VF.shp  CUNDINAMARCA_SUELOS_VF.shp.xml  CUNDINAMARCA_SUELOS_VF.shx
Servicio-90/: ProductosFinal_2020_2024.sbn  ProductosFinal_2020_2024.sbx  ProductosFinal_2020_2024.shp.xml  ProductosFinal_2020_2024.shx
Servicio-93/: Proyeccion_2024_2026.dbf  Proyeccion_2024_2026.sbn  Proyeccion_2024_2026.sbx  Proyeccion_2024_2026.shp.xml  Proyeccion_2024_2026.shx
backend/: main.py
backend/api/: endpoints.py
backend/config/: __init__.py  database.py  settings.py
backend/models/: database.py  schemas.py
backend/schemas/: api.py
backend/services/: data_extraction.py  data_processing.py  exploratory_analysis.py  visualization_service.py
backend/utils/: __init__.py  geospatial.py  statistics.py  validators.py  visualization.py
examples/: api_usage_example.py
tests/: test_api.py
